--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,17 +1,17 @@
-<div id="<%= dom_id course %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= course.title %>
-  </p>
-
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Description:</strong>
-    <%= course.description %>
-  </p>
-
-  <% if action_name != "show" %>
-    <%= link_to "Show this course", course, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to "Edit this course", edit_course_path(course), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
-    <hr class="mt-6">
+<div id="<%= dom_id course %>" class="max-w-sm overflow-hidden rounded-b shadow-lg hover:bg-red-50 ">
+  <%= link_to course, class: 'flex flex-col' do %>
+    <%= image_tag('https://via.placeholder.com/300') %>
   <% end %>
+
+  <div class="flex flex-col justify-between px-6 py-4 grow">
+    <div>
+      <div class="flex items-center justify-between mb-2 text-xl font-bold">
+        <%= course.title %>
+      </div>
+      <p class="text-sm font-extralight">Jackson Pires</p>
+      <div>
+        <p class="font-light text-md">Free</p>
+      </div>
+    </div>
+  </div>
 </div>
