--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,14 +1,9 @@
 <div class="w-full">
   <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
   <% end %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Courses</h1>
-    <%= link_to "New course", new_course_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
-  </div>
-
-  <div id="courses" class="min-w-full">
+  <div id="courses" class="flex flex-wrap justify-center min-w-full gap-14">
     <%= render @courses %>
   </div>
 </div>
