--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,6 +1,11 @@
 <div id="<%= dom_id course %>" class="max-w-sm overflow-hidden rounded-b shadow-lg hover:bg-red-50 ">
   <%= link_to course, class: 'flex flex-col' do %>
-    <%= image_tag('https://via.placeholder.com/300') %>
+
+    <% if course.image.present? %>
+      <%= image_tag course.image, class: 'w-full, rounded-t' %>
+    <% else %>
+      <%= image_tag('https://via.placeholder.com/300') %>
+    <% end %>
   <% end %>
 
   <div class="flex flex-col justify-between px-6 py-4 grow">
