--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,15 +1,25 @@
-<div class="mx-auto md:w-2/3 w-full flex">
-  <div class="mx-auto">
+<div class="flex flex-col w-full pb-6 mx-auto lg:flow-row">
+  <div class="w-full mx-auto">
     <% if notice.present? %>
-      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+      <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
     <% end %>
 
-    <%= render @course %>
+    <% if @course.lessons.any? && @course.lessons.first.video.present?  %>
+      <%= video_tag @course.lessons.first.video, controls: true, class: "w-full rounded mb-6" %>
+    <% end %>
 
-    <%= link_to "Edit this course", edit_course_path(@course), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this course", course_path(@course), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <div class="p-6 border rounded">
+      <div class="flex flex-wrap items-center justify-start w-full mb-2">
+        <div>
+          <% @course.categories.each do | category | %>
+            <div class="mt-2 mr-2 text-sm font-semibold text-purple-800 bg-purple-100 px-2.5 py-0.5 rounded">
+              <%= category.name %>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
+
     <%= link_to "Back to courses", courses_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
 </div>
